# SyncTweedies

./: README.md  pyproject.toml  requirements.txt
synctweedies/config/: mesh_config.py
synctweedies/diffusion/: controlnet.py
synctweedies/model/: base_model.py  mesh_texture_model.py
synctweedies/renderer/mesh/: mesh_renderer.py
synctweedies/utils/: mesh_utils.py
