[tool.poetry]
name = "synctweedies"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
# Pip dependencies
accelerate = "0.25.0"
addict = "2.4.0"
ansi2html = "1.9.1"
antlr4-python3-runtime = "4.9.3"
appdirs = "1.4.4"
attrs = "23.2.0"
blessed = "1.20.0"
blinker = "1.7.0"
certifi = "2023.11.17"
clean-fid = "0.1.35"
click = "8.1.7"
cmake = "3.28.1"
configargparse = "1.7"
contourpy = "1.1.1"
cycler = "0.12.1"
dash = "2.14.2"
dash-core-components = "2.0.0"
dash-html-components = "2.0.0"
dash-table = "5.0.0"
dataclasses-json = "0.6.4"
deprecated = "1.2.14"
diffusers = "0.19.3"
docker-pycreds = "0.4.0"
docstring-parser = "0.16"
drjit = "0.4.4"
einops = "0.7.0"
eval-type-backport = "0.2.0"
fastjsonschema = "2.19.1"
fastrlock = "0.8.2"
filelock = "3.13.1"
flask = "3.0.0"
fonttools = "4.47.0"
fsspec = "2023.12.2"
ftfy = "6.1.3"
fvcore = "0.1.5.post20221221"
gitdb = "4.0.11"
gitpython = "3.1.41"
gpustat = "1.1.1"
huggingface-hub = "0.20.1"
imageio = "2.19.3"
imageio-ffmpeg = "0.4.7"
importlib-metadata = "7.0.1"
importlib-resources = "6.1.1"
iopath = "0.1.10"
ipycanvas = "0.13.2"
ipyevents = "2.0.2"
ipython = "8.12.3"
ipywidgets = "8.1.1"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
joblib = "1.3.2"
jsonschema = "4.20.0"
jsonschema-specifications = "2023.12.1"
jupyter-core = "5.7.0"
jupyterlab-widgets = "3.0.9"
kiwisolver = "1.4.5"
lazy-loader = "0.3"
lit = "17.0.6"
markdown-it-py = "3.0.0"
markupsafe = "2.1.3"
marshmallow = "3.21.1"
matplotlib = "3.7.4"
mdurl = "0.1.2"
mitsuba = "3.5.0"
mpmath = "1.3.0"
mypy-extensions = "1.0.0"
natsort = "8.4.0"
nbformat = "5.9.2"
networkx = "3.1"
ninja = "1.11.1.1"
numpy = ">=1.24.4"
numpy-quaternion = "2022.4.3"
nvidia-cublas-cu11 = "11.10.3.66"
nvidia-cuda-cupti-cu11 = "11.7.101"
nvidia-cuda-nvrtc-cu11 = "11.7.99"
nvidia-cuda-runtime-cu11 = "11.7.99"
nvidia-cudnn-cu11 = "8.5.0.96"
nvidia-cufft-cu11 = "10.9.0.58"
nvidia-curand-cu11 = "10.2.10.91"
nvidia-cusolver-cu11 = "11.4.0.1"
nvidia-cusparse-cu11 = "11.7.4.91"
nvidia-ml-py = "12.535.133"
nvidia-nccl-cu11 = "2.14.3"
nvidia-nvtx-cu11 = "11.7.91"
omegaconf = "2.3.0"
open3d = "0.18.0"
opencv-python = "4.9.0.80"
pandas = "2.0.3"
pexpect = "4.9.0"
pkgutil-resolve-name = "1.3.10"
plotly = "5.18.0"
plyfile = "0.8.1"
portalocker = "2.8.2"
prompt-toolkit = "3.0.43"
protobuf = "4.25.2"
psutil = "5.9.7"
pygltflib = "1.16.2"
pymcubes = "0.1.4"
pymeshlab = "2021.10"
pyparsing = "3.1.1"
pypng = "0.20220715.0"
pyquaternion = "0.9.9"
pytz = "2023.3.post1"
pywavelets = "1.4.1"
pyyaml = "6.0.1"
referencing = "0.32.0"
regex = "2023.12.25"
retrying = "1.3.4"
rich = "13.7.1"
rpds-py = "0.16.2"
safetensors = "0.4.1"
scikit-learn = "1.3.2"
sentencepiece = "0.1.97"
sentry-sdk = "1.39.2"
setproctitle = "1.3.3"
shtab = "1.7.1"
smmap = "5.0.1"
stack-data = "0.6.3"
sympy = "1.12"
tabulate = "0.9.0"
tenacity = "8.2.3"
termcolor = "2.4.0"
threadpoolctl = "3.2.0"
tifffile = "2023.7.10"
#tokenizers = "0.13.3"
#torch = "2.0.0"
#torchvision = "0.15.1"
tqdm = "4.66.1"
transformers = "4.28.1"
trimesh = "4.0.8"
typing-inspect = "0.9.0"
tyro = "0.8.4"
tzdata = "2023.4"
urllib3 = "2.1.0"
wandb = "0.16.2"
wcwidth = "0.2.12"
werkzeug = "3.0.1"
widgetsnbextension = "4.0.9"
wrapt = "1.16.0"
xatlas = "0.0.8"
xformer = "1.0.1"
yacs = "0.1.8"
zipp = "3.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
